# api_actix

./: .env.sample  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20230815_175227_user.rs  m20230817_192951_post.rs  m20230817_194958_post.rs
src/: main.rs
src/api/: mod.rs  user_api.rs
src/config/: db.rs
src/services/: user_service.rs
