[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = "1.31.0"
migration = { path = "migration" }
entity = { path = "entity" }